--- a/2015-4-10/rails-test/Gemfile
+++ b/2015-4-10/rails-test/Gemfile
@@ -27,6 +27,7 @@ gem 'jquery-rails'
 # Use Unicorn as the app server
 # gem 'unicorn'
 gem 'mongoid'
+gem 'devise'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
