--- a/2015-4-10/rails-test/Gemfile
+++ b/2015-4-10/rails-test/Gemfile
@@ -28,6 +28,8 @@ gem 'jquery-rails'
 # gem 'unicorn'
 gem 'mongoid'
 gem 'devise'
+gem 'kaminari'
+gem 'bootstrap-kaminari-views'  
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
@@ -35,9 +37,11 @@ gem 'devise'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rack-mini-profiler'
 
   gem 'better_errors'
   gem 'quiet_assets'
+  gem 'thin'
   gem 'pry-rails'
 
   # Access an IRB console on exception pages or by using <%= console %> in views
